trying to fix cards flip on mobile

--- a/css_folder/screen.css
+++ b/css_folder/screen.css
@@ -301,7 +301,7 @@ a{
 	transform-style: preserve-3d;
 }
 
-.column:hover{
+.column:hover, .column:active{
 	backface-visibility: hidden;
 	transform: rotateX(180deg);
 }
